// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routeHelpers matches snapshot routesConfig 1`] = `
Object {
  "privateRoutes": Array [
    Object {
      "component": Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "type": [Function],
      },
      "path": "/home",
    },
    Object {
      "component": Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "type": [Function],
      },
      "path": "/profile",
    },
  ],
  "publicRoutes": Array [
    Object {
      "component": [Function],
      "path": "/",
    },
    Object {
      "component": [Function],
      "path": "/sign-up",
    },
    Object {
      "component": [Function],
      "path": "/login",
    },
  ],
}
`;

exports[`routeHelpers testing getPrivateRoutes 1`] = `
Array [
  <Memo(Connect(PrivateRoute))
    component={[Function]}
    exact={true}
    path="/profile"
  />,
]
`;

exports[`routeHelpers testing getPublicRoutes 1`] = `
Array [
  <Route
    component={[Function]}
    exact={true}
    path="/login"
  />,
]
`;
